# audio-plat

./: README.md  app.py  backend.py  client.py  crediantials.txt  ghosty_test.py  requirements.txt  reset.py  stream.py
audio_platform/: audio_platform_stack.py
audioterm/: Cargo.toml
audioterm/src/: main.rs
lambda/api_handler/: api_handler.py
lambda/processor/: processor.py
tests/unit/: test_audio_platform_stack.py
