[package]
name = "audioterm"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Async Runtime
tokio = { version = "1.36", features = ["full"] }

# AWS Official Rust SDKs
aws-config = "1.1"
aws-sdk-s3 = "1.19"
aws-sdk-dynamodb = "1.17"
aws-sdk-cognitoidentityprovider = "1.18"

# Terminal UI & Cross-platform backend
ratatui = "0.26"
crossterm = "0.27"

# The Native Image Renderer (Locked to a known stable version for Ratatui 0.26)
ratatui-image = { version = "0.4.0", features = ["crossterm"] }
image = "0.24"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
fuzzy-matcher = "0.3"